--- a/WebBS4/stilEgitim.css
+++ b/WebBS4/stilEgitim.css
@@ -35,30 +35,30 @@ body{
 
 .margin-ozgecmis
 {
-    margin-right: -10% !important;
-    margin-left: 0 !important;
+    margin-right: -25% !important;
+    margin-left: 5% !important;
 }
 
 .cv
 {
     margin-top: -50px;
-    padding-top: 50px;
+    padding-top: 60px;
     padding-bottom: 30px;
 }
 .cv h3
 {
-    margin-bottom: 10px;
-    margin-left: -30%;
+    margin-bottom: 20px;
+    margin-left: -65%;
 }
 
 .timeline
 {
-list-style-type: none;
+list-style-type: none ;
 position: relative;
 }
 .timeline:before
 {
-    content: '';
+    content:'';
     background:#14233c;
     display: inline-block;
     position: absolute;
@@ -100,11 +100,5 @@ position: relative;
     z-index: 1;
 }
 
-.footer
-{
-    background: #000;
-    height: 79px;
-    margin-top: 50px;
-    color: #fff;
-    padding-top: 10px;
-}
+
+
