--- a/WebBS4/stilEgitim.css
+++ b/WebBS4/stilEgitim.css
@@ -1,7 +1,7 @@
 body{
-    background: -moz-linear-gradient(top, rgba(30,87,153,1) 0%, rgba(125,185,232,0) 100%);
-    background: linear-gradient(to bottom, rgba(30,87,153,1) 0%,rgba(125,185,232,0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#007db9e8',GradientType=0 );
+    background: #14233c;
+    background: -webkit-linear-gradient(bottom , #49d6fd, #14233c);
+    background: linear-gradient(bottom , #49d6fd, #14233c); 
 }
 .navbar-brand img{
     width: 40px;
@@ -33,20 +33,72 @@ body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+
+
+.beceri h1{
+    font-weight: bold;
+    color:#E7CE9C;
+    margin-top: 20px;
+    margin-left: 350px;
+
+}
+
+
+.beceri-tablo{
+    position: relative;
+    float: left;
+    margin-bottom: 50px;
+    color:white;
+    left: 200px;
+
+}
+.beceri-tablo tr h4{
+    color:#E7CE9C;
+    margin-left: 70px;
+}
+.beceri-tablo p{
+    margin-top: 10px;
+    margin-left: 50px;
+    
+}
+
+
+
+.yabancidil-tablo{
+    position: relative;
+    float: left;
+    margin-bottom: 50px;
+    color:white;
+    left: 300px;
+}
+
+.yabancidil-tablo h4{
+    color:#E7CE9C;
+    margin-left: 60px;
+}
+
+.yabancidil-tablo p{
+    margin-top: 10px;
+    margin-left: 50px;
+}
+
+
 .margin-ozgecmis
 {
     margin-right: -25% !important;
     margin-left: 5% !important;
 }
 
-.cv
+.yazi
 {
     margin-top: -50px;
     padding-top: 60px;
     padding-bottom: 30px;
 }
-.cv h3
+.yazi h3
 {
+    font-weight: bold;
+    color:#E7CE9C;
     margin-bottom: 20px;
     margin-left: -65%;
 }
