--- a/WebBS4/stilFooter.css
+++ b/WebBS4/stilFooter.css
@@ -1,7 +1,10 @@
+
 .footer-foot
 {
-    background-color: hsla(221, 100%, 92%, 0.3);
-    /*background-color:#292c2f;*/
+    position: absolute;
+    bottom: 0;
+    margin: 0 auto;
+
     opacity: 0.9;
     filter:alpha(opacity=60);
     box-shadow:0 1px 1px 0 rgba(0,0,0,0.12);
@@ -9,7 +12,8 @@
     text-align:left;
     font:normal 16px sans-serif;
     padding:45px 50px;
-    margin-top:80px}
+    margin-top: 500px;
+}
 .footer-foot .footer-left p
 {
     color:#666dce;
