--- a/WebBS4/stilIletisim.css
+++ b/WebBS4/stilIletisim.css
@@ -1,8 +1,8 @@
-/*body{
-    background: -moz-linear-gradient(top, rgba(30,87,153,1) 0%, rgba(125,185,232,0) 100%);
-    background: linear-gradient(to bottom, rgba(30,87,153,1) 0%,rgba(125,185,232,0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#007db9e8',GradientType=0 );
-}*/
+body{
+    background: #14233c;
+    background: -webkit-linear-gradient(bottom , #49d6fd, #14233c);
+    background: linear-gradient(bottom , #49d6fd, #14233c); 
+}
 .navbar-brand img{
     width: 40px;
     height: 40px;
@@ -31,4 +31,80 @@
 {
     float: right;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.iletisim h3{
+    color:#E7CE9C;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.message-box
+{
+    padding: 5px;
+    margin-bottom: 20px;
+    width: 100%;
+    height: 150px;
+    border: none;
+    border-bottom: 10px; 
+}
+
+.ciktilar
+{
+    color:white;
+    padding: 5px;
+    text-align: center;
+    margin: auto;
+    padding-top: 10px;
+}
+
+input[type='reset']
+{
+border:0 ;
+ background: none;
+display: block;
+margin: 10px auto;    
+text-align: center;
+border:2px solid #021420;
+padding: 14px 10px;
+width: 150px;
+outline: none;
+color: white;
+border-radius: 24px;
+transition: 0.25s;
+cursor:pointer;
+}
+
+input[type='reset']:hover{
+    background: #021420;
+}
+
+input[type='submit']
+{
+border:0 ;
+background: none;
+display: block;
+margin: 10px auto;
+text-align: center;
+border:2px solid #021420;
+padding: 14px 10px;
+width: 150px;
+outline: none;
+color: white;
+border-radius: 24px;
+transition: 0.25s;
+cursor:pointer;
+}
+
+input[type='submit']:hover{
+    background: #021420;
+
+}
+
+.nerden
+{
+    padding: 5px;
+    margin-bottom: 20px;
+    width: 150px;
+
 }
