--- a/WebBS4/stilIndex.css
+++ b/WebBS4/stilIndex.css
@@ -1,7 +1,7 @@
 body{
-    background: -moz-linear-gradient(top, rgba(30,87,153,1) 0%, rgba(125,185,232,0) 100%);
-    background: linear-gradient(to bottom, rgba(30,87,153,1) 0%,rgba(125,185,232,0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#007db9e8',GradientType=0 );
+    background: #14233c;
+    background: -webkit-linear-gradient(bottom , #49d6fd, #14233c);
+    background: linear-gradient(bottom , #49d6fd, #14233c); 
 }
 .navbar-brand img{
     width: 40px;
@@ -80,4 +80,8 @@ font-size: 20px;
 .index-box:hover p
 {
 color: #fff;
+}
+
+.btn-success{
+    margin-left: 15px;
 }
