--- a/WebBS4/stilMiras.css
+++ b/WebBS4/stilMiras.css
@@ -1,8 +1,8 @@
-/*body{
-    background: -moz-linear-gradient(top, rgba(30,87,153,1) 0%, rgba(125,185,232,0) 100%);
-    background: linear-gradient(to bottom, rgba(30,87,153,1) 0%,rgba(125,185,232,0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#007db9e8',GradientType=0 );
-}*/
+body{
+    background: #14233c;
+    background: -webkit-linear-gradient(bottom , #49d6fd, #14233c);
+    background: linear-gradient(bottom , #49d6fd, #14233c); 
+}
 .navbar-brand img{
     width: 40px;
     height: 40px;
@@ -31,4 +31,51 @@
 {
     float: right;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.w-100-kultur
+{
+height: 350px;
+width: 100% !important;
+}
+
+.carousel-inner 
+{
+    height: 500px;
+}
+.carousel-inner img
+{
+    height: 500px;
+}
+
+.mamure{
+    margin-top: 35px;
+    font-weight: bold;
+    color:#E7CE9C;
+}
+.yediuyurlar{
+    margin-top: 25px;
+    font-weight: bold;
+    color:#E7CE9C;
+
+}
+.yediuyurlar h4{
+    margin-left: 45px;
+    font-weight: bold;
+    color:#E7CE9C;
+}
+.yediuyurlar h3{
+    margin-left: 100px;
+    font-weight: bold;
+    color:#E7CE9C;
+}
+
+.gilindere{
+    margin-top: 25px;
+    font-weight: bold;
+    color:#E7CE9C;
+}
+
+.bilgi-yazi p{
+    color:rgb(255, 255, 255);
 }
