--- a/WebBS4/stilSehir.css
+++ b/WebBS4/stilSehir.css
@@ -1,8 +1,10 @@
-/*body{
-    background: -moz-linear-gradient(top, rgba(30,87,153,1) 0%, rgba(125,185,232,0) 100%);
-    background: linear-gradient(to bottom, rgba(30,87,153,1) 0%,rgba(125,185,232,0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#007db9e8',GradientType=0 );
-}*/
+body{
+
+    background: #14233c;
+    background: -webkit-linear-gradient(bottom , #49d6fd, #14233c);
+    background: linear-gradient(bottom , #49d6fd, #14233c); 
+
+}
 .navbar-brand img{
     width: 40px;
     height: 40px;
@@ -31,4 +33,44 @@
 {
     float: right;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.w-100-mersin
+{
+height: 350px;
+width: 100% !important;
+}
+
+.carousel-inner 
+{
+    height: 500px;
+}
+.carousel-inner img
+{
+    height: 500px;
+}
+
+.row-baslik h1{
+    font-weight: bold;
+    color:#E7CE9C;
+}
+.row-baslik p{
+    color:white;
+}
+
+.row-bilgi h3{
+    font-weight: bold;
+    color:#E7CE9C;
+}
+.row-bilgi p{
+    color:white;
+}
+
+.row-tanitim h5{
+    font-weight: bold;
+    color:#E7CE9C;
+}
+
+.row-tanitim p{
+    color:white;
 }
